--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <h1>Totally Trivial Trivia!</h1>
       <div id="sub-wrapper">
         <div id="quiz-area">
+          <p>Test yourself and your brain function</p>
           <button id="start">Start</button>
         </div>
       </div>
